Fix color of pre and code text in dark mode

--- a/site/layouts/partials/css/academic.css
+++ b/site/layouts/partials/css/academic.css
@@ -217,6 +217,10 @@ code {
   padding-right: 3px;
 }
 
+.dark pre, .dark code {
+  color: #fff !important;
+}
+
 hr {
   border: 0;
   height: 1px;
